correction for Observations_IOC_STOFS and added IOC_in_STOFS

--- a/Observations_IOC_STOFS.ipynb
+++ b/Observations_IOC_STOFS.ipynb
@@ -71,7 +71,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "m = pd.merge(stof2d, ioc_,on=['lon', 'lat'], how='outer')\n",
+    "# Add a temporary key column to each dataframe to ensure uniqueness\n",
+    "stof2d['_tmpkey'] = range(len(stof2d))\n",
+    "ioc_['_tmpkey'] = range(len(ioc_))\n",
+    "\n",
+    "# Perform the outer merge on both the 'lon', 'lat', and the temporary key column\n",
+    "m = pd.merge(stof2d, ioc_, on=['lon', 'lat', '_tmpkey'], how='outer')\n",
+    "\n",
+    "# Now drop the temporary key columns\n",
+    "m.drop('_tmpkey', axis=1, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "m"
    ]
   },
