--- a/best_candidates_ioc.ipynb
+++ b/best_candidates_ioc.ipynb
@@ -6,12 +6,11 @@
    "source": [
     "This notebook contains the methodology for: \n",
     " 1. choosing the best IOC candidates for storm surge validation purposes\n",
-    " 2. extracting STOFS2D data\n",
     "\n",
-    "and edit of this notebook will be done for: \n",
+    "an edit of this notebook will be done for: \n",
     "\n",
-    " 3. the data availability\n",
-    " 4. the data quality \n",
+    " 2. the data availability\n",
+    " 3. the data quality \n",
     "of IOC candidates"
    ]
   },
@@ -33,17 +32,12 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "We will extract observed data from the STOF2D model, we will focus on the points locations exported by the model. \n",
-    "\n",
-    "The files have the following format: `stofs_2d_glo.tCCz.points.{cwl,htp,swl}.nc` for \"Six-minute station time series water level (m, MSL) forecast files at verification sites\"\n",
-    " * `swl` is storm surge only\n",
-    " * `htp` is astromical tide only\n",
-    " * `cwl` is combined water level (`swl` + `htp`)\n",
-    "\n",
-    "More information can be found on this page: https://noaa-gestofs-pds.s3.amazonaws.com/README.html"
+    "world_oceans = gp.read_file(\"https://gist.github.com/tomsail/2fa52d9667312b586e7d3baee123b57b/raw/23929561eaa8aa76376580a7df300c4e3eb2e509/world_maritime_sectors.json\")"
    ]
   },
   {
@@ -52,8 +46,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# A file available at the following address references all stofs 2D stations:\n",
+    "IOC_CLEANUP = \"ioc_cleanup_2023.csv\"\n",
+    "ioc_cleanup = pd.read_csv(IOC_CLEANUP, index_col=0).rename(columns={\"longitude\": 'lon', \"latitude\": 'lat', \"Station_Name\":\"location\",\"Country\":\"country\"})\n",
+    "(   world_oceans.hvplot(c='ocean',geo=True).opts(cmap='tab20c') * \n",
+    "    ioc_cleanup.hvplot.points(x=\"lon\",y=\"lat\",c='k', s= 40,geo=True,coastline=True)\n",
+    " ).opts(height=450)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Our experience with [skill-panel-demo](https://github.com/seareport/skill-panel-demo) got us the to following conclusion:\n",
     "\n",
+    "The previous set of stations from `ioc_cleanup` is not sufficient. We now need to have: \n",
+    " * more stations to compare with models\n",
+    " * more time coverage\n",
+    "\n",
+    "We want to have a maximum of stations that correspond with STOFS2D output locations. as we  want to compare: \n",
+    " **IOC observations** vs **our model** vs **STOFS2D** output locations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# The latest STOFS2D locations output locations (for STOFS2D version 2.1.0) are: \n",
     "def get_stofs():\n",
     "    mycols = [str(i) for i in range(6)] # we expect 17 cols max in that file\n",
     "    stof2d = pd.read_csv(\n",
@@ -71,7 +91,7 @@
     "    return stof2d\n",
     "\n",
     "stofs = get_stofs()\n",
-    "stofs"
+    "stofs.hvplot.points(geo=True,coastline=True).opts(height=450)"
    ]
   },
   {
@@ -87,9 +107,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "stofs1 = xr.open_dataset(\"stofs2d/20220912_stofs_2d_glo.t18z.points.swl.nc\")\n",
-    "stofs2 = xr.open_dataset(\"stofs2d/20231010_stofs_2d_glo.t18z.points.swl.nc\")\n",
-    "stofs3 = xr.open_dataset(\"stofs2d/20241229_stofs_2d_glo.t12z.points.swl.nc\")\n",
+    "stofs1 = xr.open_dataset(\"stofs2d/20220912_stofs_2d_glo.t12z.points.swl.nc\")\n",
+    "stofs2 = xr.open_dataset(\"stofs2d/20231010_stofs_2d_glo.t00z.points.swl.nc\")\n",
+    "stofs3 = xr.open_dataset(\"stofs2d/20241229_stofs_2d_glo.t00z.points.swl.nc\")\n",
+    "#SEE APPENDIX FOR DOWNLOADING STOFS2D DATA\n",
     "\n",
     "stofs_2022 = stofs[stofs.ID.isin([' '.join(s.decode(\"utf-8\").strip().split()[:3]) for s in stofs1.station_name.values])];len(stofs_2022)\n",
     "stofs_2023 = stofs[stofs.ID.isin([' '.join(s.decode(\"utf-8\").strip().split()[:3]) for s in stofs2.station_name.values])];len(stofs_2023)\n",
@@ -122,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,17 +170,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We already have established a database for clean IOC data between 2022 and 2023, we'll use it as a reference: "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "IOC_CLEANUP = \"ioc_cleanup_2023.csv\"\n",
-    "ioc_cleanup = pd.read_csv(IOC_CLEANUP, index_col=0).rename(columns={\"longitude\": 'lon', \"latitude\": 'lat', \"Station_Name\":\"location\",\"Country\":\"country\"})"
+    "We already have established a database for clean IOC data between 2022 and 2023 (see 1st plot), we'll use it as a reference: "
    ]
   },
   {
@@ -172,9 +183,9 @@
     "stofs_plot1 = stofs_2023.hvplot.scatter(x=\"lon\", y=\"lat\", hover_cols = \"ID\", s=150, c='grey', label = 'STOFS 2023 output stations')\n",
     "stofs_plot2 = stofs_2024.hvplot.scatter(x=\"lon\", y=\"lat\", hover_cols = \"ID\", s=200, c='k', label = 'STOFS 2024 output stations')\n",
     "ioc_plot = ioc_.hvplot.scatter(x=\"lon\", y=\"lat\",hover_cols = \"ioc_code\", s= 30 , c = 'y', label = 'all IOC stations')\n",
-    "ioc_cleanup_plot = ioc_cleanup.hvplot.scatter(x=\"lon\", y=\"lat\",s = 80, c='r', label = \"stations cleaned for 2022-2023\")\n",
+    "ioc_cleanup_plot = ioc_cleanup.hvplot.scatter(coastline=True,x=\"lon\", y=\"lat\",s = 80, c='r', label = \"stations cleaned for 2022-2023\")\n",
     "\n",
-    "(stofs_plot2 * stofs_plot1 * stofs_plot * ioc_cleanup_plot* ioc_plot).opts(width = 1600, height = 800)"
+    "(stofs_plot2 * stofs_plot1 * stofs_plot * ioc_cleanup_plot* ioc_plot).opts(width = 1300, height = 600)"
    ]
   },
   {
@@ -186,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,11 +253,10 @@
     "stofs_plot =  stofs_2022.hvplot.scatter(x= \"lon\", y=\"lat\", hover_cols = \"ID\", s=130, c='lightgrey', label = 'STOFS 2022 output stations')\n",
     "stofs_plot1 = stofs_2023.hvplot.scatter(x=\"lon\", y=\"lat\", hover_cols = \"ID\", s=150, c='grey', label = 'STOFS 2023 output stations')\n",
     "stofs_plot2 = stofs_2024.hvplot.scatter(x=\"lon\", y=\"lat\", hover_cols = \"ID\", s=200, c='k', label = 'STOFS 2024 output stations')\n",
-    "ioc_plot = ioc_.hvplot.scatter(x=\"lon\", y=\"lat\",hover_cols = \"ioc_code\", s= 30 , c = 'y',label = 'all IOC stations')\n",
-    "ioc_cleanup_plot = ioc_cleanup.hvplot.scatter(x=\"lon\", y=\"lat\",s = 90, c='r',label = 'stations already cleaned for 2022-2023')\n",
-    "ioc_to_add_plot = ioc_to_add.hvplot.scatter(x=\"lon\", y=\"lat\",s = 90, geo=True, c = 'g', label = 'stations to be added')\n",
+    "ioc_cleanup_plot = ioc_cleanup.hvplot.scatter(x=\"lon\", y=\"lat\",hover_cols = \"ioc_code\",s = 90, c='r',label = 'stations already cleaned for 2022-2023')\n",
+    "ioc_to_add_plot = ioc_to_add.hvplot.scatter(coastline=True,x=\"lon\", y=\"lat\",s = 90, c = 'g', label = 'stations to be added')\n",
     "\n",
-    "(stofs_plot2 * stofs_plot1 * stofs_plot * ioc_to_add_plot * ioc_cleanup_plot).opts(width = 1800, height = 800)"
+    "(stofs_plot2 * stofs_plot1 * stofs_plot * ioc_to_add_plot * ioc_cleanup_plot).opts(width = 1400, height = 600)"
    ]
   },
   {
@@ -269,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -350,18 +360,38 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "p2 = stofs_2022.hvplot.scatter(x=\"lon\", y=\"lat\", hover_cols = \"ID\", s=50, c='grey', label = 'STOFS 2022 output stations')\n",
-    "ip = ioc_cleanup_2024.hvplot.scatter(x=\"lon\", y=\"lat\",s = 10, c='g',label = 'IOC_CLEANUP 2022-2024')\n",
-    "k2 = keep_nodes_2022.hvplot.scatter(x=\"lon\", y=\"lat\", c = 'red',    s = 10, label = \"STOFS2D stations to be extracted\")\n",
+    "p2 = stofs_2022.hvplot.scatter(x=\"lon\", y=\"lat\", hover_cols = \"ID\", s=70, c='grey',line_color=\"lightgrey\", label = 'STOFS 2022 output stations')\n",
+    "ip = ioc_cleanup_2024.hvplot.scatter(x=\"lon\", y=\"lat\",s = 10, c='k',coastline=True, label = 'IOC_CLEANUP 2022-2024')\n",
+    "k2 = keep_nodes_2022.hvplot.scatter(x=\"lon\", y=\"lat\", c = 'red', s = 20,coastline=True, label = \"STOFS2D stations to be extracted\")\n",
     "\n",
-    "(p2 * ip * k2).opts(width = 1800, height = 800)"
+    "# (world_oceans.hvplot(c='ocean',alpha= 0.9).opts(cmap='tab20c') * p2 * ip * k2 ).opts(width = 1100, height = 800)\n",
+    "(world_oceans.hvplot(c='ocean',alpha= 0.9).opts(cmap='tab20c') * p2 * ip ).opts(width = 1500, height = 900)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "download STOFS"
+    "download IOC data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# for i_s, station in ioc_cleanup_2024.iterrows():\n",
+    "#     print(station.ioc_code)\n",
+    "#     df = searvey.fetch_ioc_station(station.ioc_code, \"2022-01-01\", \"2024-12-31\")\n",
+    "#     df.to_parquet(f\"data/{station.ioc_code}.parquet\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "check data availability"
    ]
   },
   {
@@ -370,106 +400,152 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pathlib\n",
-    "\n",
-    "import pandas as pd\n",
-    "import httpx\n",
-    "import multifutures\n",
-    "\n",
-    "base_path = \"stofs2d\"\n",
-    "\n",
-    "pathlib.Path(base_path).mkdir(exist_ok=True)\n",
-    "\n",
-    "# The URL changed at 2023-01-08 \n",
-    "# These are the new urls \n",
-    "base_url = \"https://noaa-nos-stofs2d-pds.s3.amazonaws.com/stofs_2d_glo.{date_str}/stofs_2d_glo.t{time}z.points.swl.nc\"\n",
-    "new_url_names = {}\n",
-    "for date in pd.date_range(\"2023-01-08\", \"2024-12-31\"):\n",
-    "    date_str = date.strftime(\"%Y%m%d\")\n",
-    "    for time in (\"00\", \"06\", \"12\", \"18\"):\n",
-    "        url = base_url.format(date_str=date_str, time=time)\n",
-    "        name = f\"{date_str}_{url.rsplit('/', 1)[1]}\"\n",
-    "        new_url_names[url] = name\n",
-    "\n",
-    "# These are the old urls \n",
-    "base_url = \"https://noaa-nos-stofs2d-pds.s3.amazonaws.com/estofs.{date_str}/estofs.t{time}z.points.swl.nc\"\n",
-    "old_url_names = {}\n",
-    "for date in pd.date_range(\"2022-01-01\", \"2023-01-07\"):\n",
-    "    date_str = date.strftime(\"%Y%m%d\")\n",
-    "    for time in (\"00\", \"06\", \"12\", \"18\"):\n",
-    "        url = base_url.format(date_str=date_str, time=time)\n",
-    "        name = f\"{date_str}_{url.rsplit('/', 1)[1].replace('estofs', 'stofs_2d_glo')}\"\n",
-    "        old_url_names[url] = name\n",
-    "\n",
-    "def download_file(client, url, name):\n",
-    "    with open(name, \"wb\") as fd:\n",
-    "        with client.stream(\"GET\", url) as response:\n",
-    "            for data in response.iter_bytes():\n",
-    "                fd.write(data)\n",
-    "\n",
-    "with httpx.Client() as client:\n",
-    "    func_kwargs = [{\"client\": client, \"url\": url, \"name\": f\"{base_path}/{name}\"} for (url, name) in new_url_names.items()]\n",
-    "    multifutures.multithread(func=download_file, func_kwargs=func_kwargs, check=True)\n",
-    "\n",
-    "with httpx.Client() as client:\n",
-    "    func_kwargs = [{\"client\": client, \"url\": url, \"name\": f\"{base_path}/{name}\"} for (url, name) in old_url_names.items()]\n",
-    "    multifutures.multithread(func=download_file, func_kwargs=func_kwargs, check=True)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "STOFS_FOLDER = \"stofs2d/\""
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "extract stations"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "import re \n",
     "import glob\n",
-    "# gather stofs2D data\n",
-    "ds1 = []\n",
-    "ds2 = []\n",
-    "ds3 = []\n",
-    "for file in sorted(glob.glob(STOFS_FOLDER + \"*.swl.nc\")):\n",
-    "    root, filename = os.path.split(file)\n",
-    "    date = datetime.strptime(filename, \"%Y%m%d_stofs_2d_glo.t%Hz.points.swl.nc\")\n",
-    "    tmp = xr.open_dataset(file)\n",
-    "    \n",
-    "    if date > datetime(2024,5,14,11):\n",
-    "        ds3.append(tmp.sel(time=slice(date,date+pd.Timedelta(hours=6))))\n",
-    "        print(date, len(tmp.station_name),\"ds3\")\n",
+    "\n",
+    "ioc_cleanup_2024['n_sensors'] = 0\n",
+    "\n",
+    "pattern = r\"data/([\\w\\d]+)\\.parquet\"\n",
+    "stations = [re.search(pattern, path).group(1) for path in glob.glob(\"data/*parquet\")]\n",
+    "f\"Total stations: {len(stations)}\"\n",
+    "\n",
+    "# get the stations with data\n",
+    "keep_stations = []\n",
+    "for station in sorted(stations): \n",
+    "    df = pd.read_parquet(f\"data/{station}.parquet\")\n",
+    "    if df.empty:\n",
+    "        pass\n",
     "    else:\n",
-    "        if date > datetime(2023,1,7, 23):\n",
-    "            ds2.append(tmp.sel(time=slice(date,date+pd.Timedelta(hours=6))))\n",
-    "            print(date, len(tmp.station_name),\"ds2\")\n",
-    "        else: # date < datetime.datetime(2023,1,7)\n",
-    "            ds1.append(tmp.sel(time=slice(date,date+pd.Timedelta(hours=6))))\n",
-    "            print(date, len(tmp.station_name),\"ds1\")\n",
-    "# keep fist time \n",
-    "ds1 = xr.concat(ds1, dim=\"time\")\n",
-    "ds2 = xr.concat(ds2, dim=\"time\")\n",
-    "ds3 = xr.concat(ds3, dim=\"time\")\n",
-    "for it, station in keep_nodes_2022.iterrows(): # take 2022 because it has less nodes\n",
-    "    print(f'Station {station.ioc_code} at {station.lon:.2f}, {station.lat:.2f}')\n",
-    "    ds1_subset = ds1.isel(station = int(station.mesh_index))\n",
-    "    ds2_subset = ds2.isel(station = int(station.mesh_index))\n",
-    "    ds3_subset = ds3.isel(station = int(station.mesh_index))\n",
-    "    ds_subset = xr.concat([ds1_subset, ds2_subset, ds3_subset], dim=\"time\")\n",
-    "    df = ds_subset.to_pandas()\n",
-    "    df.to_parquet(f'data/{station.ioc_code}.parquet')"
+    "        print(station, end=\"  \")\n",
+    "        keep_stations.append(station)\n",
+    "        if \"sw1\" in df.columns: df = df.drop(columns=[\"sw1\"])\n",
+    "        if \"sw2\" in df.columns: df = df.drop(columns=[\"sw2\"])\n",
+    "        if \"bat\" in df.columns: df = df.drop(columns=[\"bat\"])\n",
+    "        print(list(df.columns))\n",
+    "\n",
+    "        ioc_cleanup_2024.loc[ioc_cleanup_2024.ioc_code == station, \"n_sensors\"] = len(df.columns)\n",
+    "        # disregard sw1, sw2 and bat\n",
+    "f\"Stations with data: {len(keep_stations)}\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ioc_cleanup_2024.n_sensors.hvplot.hist(bins=[-0.5,0.5,1.5,2.5,3.5,4.5,5.5])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ioc_cleanup_2024_with_data = ioc_cleanup_2024[ioc_cleanup_2024.ioc_code.isin(keep_stations)]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "store in separate files"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i_s, s in ioc_cleanup_2024_with_data.iterrows():\n",
+    "    df = pd.read_parquet(f\"data/{s.ioc_code}.parquet\")\n",
+    "    if \"sw1\" in df.columns: df = df.drop(columns=[\"sw1\"])\n",
+    "    if \"sw2\" in df.columns: df = df.drop(columns=[\"sw2\"])\n",
+    "    if \"bat\" in df.columns: df = df.drop(columns=[\"bat\"])\n",
+    "    for sensor in df.columns:\n",
+    "        ts = df[[sensor]]\n",
+    "        ts.to_parquet(f\"raw/{s.ioc_code}_{sensor}.parquet\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "evaluate data availabilty"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pattern = r\"raw/([\\w\\d]+)\\.parquet\"\n",
+    "stations_sensors = [re.search(pattern, path).group(1) for path in glob.glob(\"raw/*parquet\")]\n",
+    "f\"Total individual recordings: {len(stations_sensors)}\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import typing as T\n",
+    "DETIDE_START = pd.Timestamp(2022,1,1)\n",
+    "DETIDE_END = pd.Timestamp(2025,1,1)\n",
+    "\n",
+    "def calc_ratio(sr: pd.Series, period: pd.DatetimeIndex) -> float:\n",
+    "    sr = sr[(period[0] <= sr.index) & (sr.index <= period[-1])]\n",
+    "    return len(sr) / len(period)\n",
+    "\n",
+    "table = dict()\n",
+    "for station_sensor in sorted(stations_sensors):\n",
+    "    station, sensor = station_sensor.split('_')\n",
+    "    df = pd.read_parquet(f\"raw/{station_sensor}.parquet\")\n",
+    "    interval_value_counts = df.index.to_series().diff().value_counts()\n",
+    "    main_interval_occurences = interval_value_counts.iloc[0]\n",
+    "    main_interval = T.cast(pd.Timedelta, interval_value_counts.index[0])\n",
+    "    detide_period = pd.date_range(DETIDE_START, DETIDE_END, freq=main_interval, inclusive=\"left\")\n",
+    "    table[station_sensor] = dict()\n",
+    "    item = ioc_cleanup_2024_with_data[ioc_cleanup_2024_with_data.ioc_code == station]\n",
+    "    table[station_sensor][\"lon\"] = item.lon.values[0]\n",
+    "    table[station_sensor][\"lat\"] = item.lat.values[0]\n",
+    "    table[station_sensor][\"completeness\"] = calc_ratio(df, detide_period)\n",
+    "    # redo per sensor \n",
+    "\n",
+    "stations_sensors_availability = pd.DataFrame(table).T"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stations_sensors_availability.describe()\n",
+    "stations_sensors_availability.completeness.hvplot.hist()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stations_sensors_availability.hvplot.points(\n",
+    "    x= \"lon\", y='lat', \n",
+    "    hover_cols = ['index',\"completeness\" ],\n",
+    "    color = \"completeness\", \n",
+    "    geo=True,\n",
+    "    s = 200\n",
+    ").opts(\n",
+    "    height = 800,\n",
+    "    width = 1600, \n",
+    "    cmap='colorwheel'\n",
+    ") * k2"
    ]
   }
  ],
