--- a/Observations_IOC_STOFS.ipynb
+++ b/Observations_IOC_STOFS.ipynb
@@ -18,7 +18,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_meta() -> gp.GeoDataFrame:\n",
+    "from shapely.geometry import Point\n",
+    "def get_stofs2d_meta():\n",
+    "    stofs2d = pd.read_csv(\n",
+    "        \"https://polar.ncep.noaa.gov/stofs/data/stofs_2d_glo_elev_stat_v2_1_0\",\n",
+    "        names=[\"coords\", \"name\"],\n",
+    "        sep=\"!\",\n",
+    "        header=None,\n",
+    "        skiprows=1\n",
+    "    )\n",
+    "    stofs2d = stofs2d.assign(\n",
+    "        lon=stofs2d.coords.str.split(\"\\t\", n=1).str[0].astype(float),\n",
+    "        lat=stofs2d.coords.str.strip().str.rsplit(\"\\t\", n=1).str[1].astype(float),\n",
+    "        stofs2d_name=stofs2d.name.str.strip(),\n",
+    "    ).drop(columns=[\"coords\", \"name\"])\n",
+    "    stofs2d[\"geometry\"] = [Point(xy) for xy in zip(stofs2d.lon, stofs2d.lat)]\n",
+    "\n",
+    "    return stofs2d\n",
+    "\n",
+    "\n",
+    "def get_ioc_meta() -> gp.GeoDataFrame:\n",
     "    meta_web = searvey.get_ioc_stations().drop(columns=[\"lon\", \"lat\"])\n",
     "    meta_api = (\n",
     "        pd.read_json(\n",
@@ -33,53 +52,13 @@
     "        meta_api[[\"ioc_code\", \"lon\", \"lat\"]].drop_duplicates(),\n",
     "        on=[\"ioc_code\"],\n",
     "    )\n",
-    "    return merged.drop(columns=[\"geometry\"])\n",
+    "    return merged\n",
     "\n",
-    "ioc_ = get_meta()\n",
-    "ioc_[\"is_ioc\"] = True\n",
-    "ioc_['is_satellite'] = False\n",
-    "ioc_"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mycols = [str(i) for i in range(6)] # we expect 17 cols max in that file\n",
-    "stof2d = pd.read_csv(\n",
-    "    \"https://polar.ncep.noaa.gov/stofs/data/stofs_2d_glo_elev_stat_v2_1_0\",\n",
-    "    names=mycols, \n",
-    "    sep=\"\\t+|!\", \n",
-    "    header=None, \n",
-    "    skiprows=1\n",
-    ")\n",
-    "stof2d['Info'] = stof2d.apply(lambda row: ' '.join(filter(None, row[2:])), axis=1)\n",
-    "stof2d['ID'] = stof2d['Info'].apply(lambda x: ' '.join(x.split()[:3]))\n",
-    "stof2d['Info'] = stof2d.apply(lambda row: row['Info'].replace(row['ID'], '').strip(), axis=1)\n",
-    "stof2d = stof2d.drop(columns=[\"2\", \"3\", \"4\", \"5\"])\n",
-    "stof2d.rename(columns={\"0\": 'lon', \"1\": 'lat'}, inplace=True)\n",
-    "stof2d['is_satellite'] = stof2d.apply(lambda row: \"SA\" in row[\"ID\"], axis=1)\n",
-    "stof2d['is_ioc'] = False\n",
-    "stof2d"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Add a temporary key column to each dataframe to ensure uniqueness\n",
-    "stof2d['_tmpkey'] = range(len(stof2d))\n",
-    "ioc_['_tmpkey'] = range(len(ioc_))\n",
     "\n",
-    "# Perform the outer merge on both the 'lon', 'lat', and the temporary key column\n",
-    "m = pd.merge(stof2d, ioc_, on=['lon', 'lat', '_tmpkey'], how='outer')\n",
-    "\n",
-    "# Now drop the temporary key columns\n",
-    "m.drop('_tmpkey', axis=1, inplace=True)"
+    "def merge_ioc_and_stofs(ioc: pd.DataFrame, stofs2d: pd.DataFrame) -> pd.DataFrame:\n",
+    "    stations = pd.concat((ioc, stofs2d), ignore_index=True)\n",
+    "    stations = stations.assign(unique_id=stations.ioc_code.combine_first(stations.stofs2d_name))\n",
+    "    return stations"
    ]
   },
   {
@@ -88,7 +67,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "m"
+    "ioc = get_ioc_meta()\n",
+    "stofs2d = get_stofs2d_meta()\n",
+    "m = merge_ioc_and_stofs(ioc=ioc, stofs2d=stofs2d)\n",
+    "m.to_csv(\"assets/ioc_stofs.csv\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "you can grab the csv file at: https://github.com/tomsail/static/assets/ioc_stofs.csv"
    ]
   },
   {
@@ -97,50 +86,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "m['is_ioc'] = m['is_ioc_x'].fillna(m['is_ioc_y'])\n",
-    "m['is_satellite'] = m['is_satellite_x'].fillna(m['is_satellite_y'])\n",
-    "m[\"id\"] = m[\"ID\"].fillna(m[\"ioc_code\"])\n",
-    "m = m.drop(columns=['is_ioc_x', 'is_ioc_y', 'is_satellite_x', 'is_satellite_y'])\n",
-    "m"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "m.hvplot.points(\n",
+    "(ioc.hvplot.points(\n",
     "    x='lon', y='lat', \n",
-    "    c='is_ioc', \n",
+    "    geo=True, \n",
+    "    s=50,\n",
+    "    tiles = True, \n",
+    "    cmap = \"coolwarm\", \n",
+    "    hover_cols=[\"unique_id\"], \n",
+    ")*stofs2d.hvplot.points(\n",
+    "    x='lon', y='lat', \n",
     "    geo=True, \n",
     "    tiles = True, \n",
     "    cmap = \"coolwarm\", \n",
-    "    hover_cols=[\"id\"], \n",
-    ").opts(\n",
+    "    hover_cols=[\"unique_id\"], \n",
+    ")).opts(\n",
     "    width = 1800, \n",
     "    height=1000,\n",
     "    title=\"False = STOFS list, True = IOC database\", \n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "m.hvplot.points(\n",
-    "    x='lon', y='lat', \n",
-    "    c='is_satellite', \n",
-    "    geo=True, \n",
-    "    tiles = True, \n",
-    "    cmap = \"coolwarm\", \n",
-    "    hover_cols=[\"id\"], \n",
-    ").opts(\n",
-    "    width = 1800, \n",
-    "    height=1000,\n",
-    "    title=\"Does the Point corresponds to setellite location? False / True\", \n",
     ")"
    ]
   }
